Fix Pricing Accordion z-index

--- a/pricingsass.css
+++ b/pricingsass.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  z-index: -2;
 }
 @media (max-width: 575px) {
   .footer {
