--- a/scss/pricing.scss
+++ b/scss/pricing.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    z-index: -2;
 
     @media (max-width: 575px) {
         padding: 3% 6% 10%;
